--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="action_settings">Settings</string>
     <string name="add_job">Add Job</string>
     <string name="Job_description"> Add your Job Description here</string>
+    <string name="loading"> Loading</string>
+
 
     <string-array name="career_array">
         <item>Student</item>
