send cv by mail

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="user_extra"> user extra</string>
+
 
     <string name="action_settings">Settings</string>
     <string name="add_job">Add Job</string>
