--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
         <item>Jop Seeker</item>
     </string-array>
     <string name="sign_in">Sign In</string>
+    <string name="sign_up">Sign Up</string>
     <string name="create_account">Create Account</string>
     <string name="sign_out">Sign Out</string>
     <string name="verify_email">Verify Email</string>
@@ -36,5 +37,16 @@
     <string name="auth_failed">Authentication failed</string>
     <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
     <string name="firebase_status_fmt">Firebase User: %s</string>
+    <string name="cv_required">"You must upload Your Cv"</string>
+    <string name="phone">Phone</string>
+
+    <string name="password">Password</string>
+    <string name="email">E-mail</string>
+    <string name="name">Name</string>
+    <string name="career_level">Carear Level  : </string>
+
+    <string name="max_salary">Max Salary  : </string>
+    <string name="min_salary">Min Salary  : </string>
+
 
 </resources>
