--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     </string-array>
     <string name="sign_in">Sign In</string>
     <string name="sign_up">Sign Up</string>
+    <string name="sign_up_with_cv">Sign Up with CV</string>
     <string name="create_account">Create Account</string>
     <string name="sign_out">Sign Out</string>
     <string name="verify_email">Verify Email</string>
@@ -47,6 +48,7 @@
 
     <string name="max_salary">Max Salary  : </string>
     <string name="min_salary">Min Salary  : </string>
+
 
 
 </resources>
